updated all textblock font color

--- a/src/FolderSharer/MainWindow.xaml
+++ b/src/FolderSharer/MainWindow.xaml
@@ -19,7 +19,7 @@
     <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="Foreground"
-                    Value="#FF734546" />
+                    Value="Peru" />
             <Setter Property="FontSize"
                     Value="16" />
             <Setter Property="Padding"
@@ -218,25 +218,29 @@
                         <TextBlock Text="{Binding Copyright}" />
                         <TextBlock Text="{Binding Developer}" />
                         <TextBlock>
-                            <Hyperlink NavigateUri="{Binding HomeUrl}"
-                                       Command="{Binding NavigateHomeUrlCmd}">
+                            <Hyperlink Command="{Binding NavigateHomeUrlCmd}">
                                 Project Home
                             </Hyperlink>
-
                         </TextBlock>
                         <TextBlock>
-                            <Hyperlink NavigateUri="{Binding DownloadUrl}"
-                                       Command="{Binding NavigateDownloadUrlCmd}">
+                            <Hyperlink Command="{Binding NavigateLicenseUrlCmd}">
+                                License
+                            </Hyperlink>
+                        </TextBlock>
+                        <TextBlock>
+                            <Hyperlink Command="{Binding NavigateChangelogUrlCmd}">
+                                Change log
+                            </Hyperlink>
+                        </TextBlock>
+                        <TextBlock>
+                            <Hyperlink Command="{Binding NavigateDownloadUrlCmd}">
                                 Download Latest
                             </Hyperlink>
-
                         </TextBlock>
                         <TextBlock>
-                            <Hyperlink NavigateUri="{Binding IssuesUrl}"
-                                       Command="{Binding NavigateIssuesUrlCmd}">
+                            <Hyperlink Command="{Binding NavigateIssuesUrlCmd}">
                                 Submit Issues and Requests
                             </Hyperlink>
-
                         </TextBlock>
 
                     </StackPanel>
