--- a/src/FolderSharer/MainWindow.xaml
+++ b/src/FolderSharer/MainWindow.xaml
@@ -10,7 +10,7 @@
         MinWidth="{Binding MinWidth}"
         Height="480"
         Width="720"
-        Background="{Binding BackgroundColor, Mode=TwoWay}">
+        Background="{Binding BackgroundColor, Mode=TwoWay}" Foreground="Brown">
 
     <Window.DataContext>
         <local:MainViewModel x:Name="mvm" />
@@ -19,7 +19,7 @@
     <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="Foreground"
-                    Value="Peru" />
+                    Value="DarkOliveGreen" />
             <Setter Property="FontSize"
                     Value="16" />
             <Setter Property="Padding"
@@ -141,7 +141,7 @@
                     <TextBox Grid.Column="1"
                              Grid.Row="4"
                              Grid.ColumnSpan="2"
-                             Text="{Binding ShareName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                             Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
                     <TextBlock Grid.Column="1"
                                Grid.Row="5"
@@ -151,7 +151,7 @@
                     <TextBox Grid.Column="1"
                              Grid.Row="6"
                              Grid.ColumnSpan="2"
-                             Text="{Binding ShareDescription, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                             Text="{Binding Description, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
                     <Button Grid.Column="1"
                             Grid.Row="7"
