--- a/src/FolderSharer/MainWindow.xaml
+++ b/src/FolderSharer/MainWindow.xaml
@@ -10,7 +10,8 @@
         MinWidth="{Binding MinWidth}"
         Height="480"
         Width="720"
-        Background="{Binding BackgroundColor, Mode=TwoWay}" Foreground="Brown">
+        Background="{Binding BackgroundColor, Mode=TwoWay}"
+        Foreground="Brown">
 
     <Window.DataContext>
         <local:MainViewModel x:Name="mvm" />
@@ -85,7 +86,7 @@
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="13" />
+            <RowDefinition Height="16" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="3" />
@@ -94,8 +95,13 @@
         <TabControl Grid.Row="1"
                     Grid.Column="1"
                     FontSize="13"
-                    FontStretch="Expanded"
-                    Background="White">
+                    FontStretch="Expanded">
+
+            <TabControl.Effect>
+                <DropShadowEffect Direction="315"
+                                  ShadowDepth="2"
+                                  Opacity="0.5" />
+            </TabControl.Effect>
 
             <TabItem Header="Share"
                      DataContext="{Binding ShareViewModel}">
@@ -122,11 +128,11 @@
                                Grid.Row="1"
                                Text="Path"
                                Padding="4" />
-                    
+
                     <TextBox Grid.Column="1"
                              Grid.Row="2"
                              Text="{Binding SelectedPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                    
+
                     <Button Grid.Column="2"
                             Grid.Row="2"
                             Content="Select..."
@@ -137,7 +143,7 @@
                                Grid.Row="3"
                                Text="Name"
                                Padding="4" />
-                    
+
                     <TextBox Grid.Column="1"
                              Grid.Row="4"
                              Grid.ColumnSpan="2"
@@ -147,7 +153,7 @@
                                Grid.Row="5"
                                Text="Description"
                                Padding="4" />
-                    
+
                     <TextBox Grid.Column="1"
                              Grid.Row="6"
                              Grid.ColumnSpan="2"
@@ -183,19 +189,29 @@
 
                     <DataGrid Grid.Row="3"
                               ItemsSource="{Binding SharedPaths}"
-                              SelectedItem="{Binding SelectedSharedPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                              SelectedItem="{Binding SelectedSharedPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                              Background="{x:Null}"
+                              HeadersVisibility="Column"
+                              IsReadOnly="True" />
 
-                    <Button Grid.Row="4"
-                            Padding="0,12"
-                            Margin="0,8"
-                            Content="UnShare"
-                            Command="{Binding UnShareCmd}" />
+                    <Grid Grid.Row="4">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Button Margin="0,5,1.5,0"
+                                Content="Clear Selection"
+                                Command="{Binding ClearSelectionCmd}" />
+                        <Button Margin="1.5,5,0,0"
+                                Grid.Column="1"
+                                Content="UnShare"
+                                Command="{Binding UnShareCmd}" />
+                    </Grid>
                 </Grid>
             </TabItem>
 
             <TabItem Header="About ℹ"
-                     DataContext="{Binding AboutViewModel}"
-                     Background="White">
+                     DataContext="{Binding AboutViewModel}">
                 <Grid Margin="13">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
